# excel-table

./: .gitignore  mkdocs.yaml  pyproject.toml  readme.md  test_output.xlsx  text_excel_table.py
docs/: api.md  parsing.md
excel_table/: __init__.py  chart.py  constants.py  reader.py  writer.py
excel_table/models/: __init__.py  chart_format.py  table_base.py  table_format.py  table_typed.py
tests/: _test_chart.py  _test_models.py  _test_reader.py  conftest.py  test_chart_config.py  test_models.py  test_roundtrip.py
versions/20260228/excel_table/: chart.py  reader.py  writer.py
versions/20260228/excel_table/models/: __init__.py  format.py  table.py
versions/20260228/tests/: test_writer.py
