[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excel-table"
version = "0.1.7"
description = "Structured Excel table read/write library"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openpyxl>=3.1",
    "xlsxwriter>=3.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]