[tool.setuptools.packages.find]
include = ["excel_table*"]

[project]
name = "excel-table"
version = "0.1.8"
description = "Structured Excel table read/write library"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "openpyxl>=3.1",
    "xlsxwriter>=3.1",
]

[project.urls]
Homepage = "https://github.com/hiroshiasayadev-prog/excel-table"
Repository = "https://github.com/hiroshiasayadev-prog/excel-table"
